tests/fixtures/fail/match_scalar_non_exhaustive.sc
let main(): i32 = { match 42
  { 42 -> 42 }
}
